--- a/www/index.html
+++ b/www/index.html
@@ -3,14 +3,36 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/bootstrap-4.0/bootstrap.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        <div class="container-fluid">
-            <h1>Hello, world!</h1>
+        <div class="container">
+
+            <h1></h1>
+            <p id="p_path"></p>
+
+            <ol class="breadcrumb">
+            </ol>
+
+            <table class="table table-hover" id="dir_elements">
+                <thead>
+                    <tr>
+                        <th>Type</th>
+                        <th>Name</th>
+                        <th>Size</th>
+                        <th>Last Update</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
         </div>
 
-        <!-- script part -->
-        <script src="js/bootstrap.js" ></script>
+        <script src="js/popper-1.12.5.js"></script>
+        <script src="js/jquery-3.2.1.js"></script>
+        <script src="js/index.js"></script>
+        <script src="js/bootstrap-4.0/bootstrap.js" ></script>
     </body>
 </html>
