Symlink fixed, web interface OK, js OK

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="css/bootstrap-4.0/bootstrap.css">
+        <link rel="stylesheet" href="css/animate.css">
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
@@ -12,8 +13,8 @@
             <h1></h1>
             <p id="p_path"></p>
 
-            <ol class="breadcrumb">
-            </ol>
+            <ul class="nav justify-content-center">
+            </ul>
 
             <table class="table table-hover" id="dir_elements">
                 <thead>
