Web ui enhancement ++

--- a/www/index.html
+++ b/www/index.html
@@ -9,37 +9,27 @@
     </head>
     <body>
         <div class="container-fluid">
-
-            <h1></h1>
-
             <ul class="nav justify-content-center">
             </ul>
 
-            <br>
+            <div class="main-alert">
+            </div>
 
-            <button type="button" class="btn btn-warning btn-sm back-button">
-                <img src="./fancyndex/www/icon/open-iconic/svg/arrow-thick-left.svg" width="15">
-                <span class="btn-back-text"></span>
-            </button>
-
-            <br>
-            <br>
-
-            <table class="table table-sm table-hover" id="dir_elements">
-                <thead>
-                    <tr>
-                        <th id="type">Type</th>
-                        <th id="name">Name</th>
-                        <th id="date">Last Update</th>
-                        <th id="size">Size</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
+            <div class="main-body">
+                <table class="table table-responsive table-sm table-hover" id="dir_elements">
+                    <thead>
+                        <tr>
+                            <th id="type"></th>
+                            <th id="name">Name</th>
+                            <th id="date">Last Update</th>
+                            <th id="size">Size</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
         </div>
-
-        <p id="p_path"></p>
 
         <script src="./fancyndex/www/js/popper-1.12.5.js"></script>
         <script src="./fancyndex/www/js/jquery-3.2.1.js"></script>
