--- a/www/index.html
+++ b/www/index.html
@@ -9,16 +9,17 @@
     </head>
     <body>
         <div class="container-fluid">
+
             <ul class="nav justify-content-center">
             </ul>
 
-            <div class="main-alert">
-            </div>
-
             <div class="main-body">
-                <table class="table table-responsive table-sm table-hover" id="dir_elements">
+                <table class="table table-responsive table-sm" id="dir_elements">
                     <thead>
                         <tr>
+                            <th id="select">
+                                <img src="./fancyndex/www/icon/open-iconic/svg/data-transfer-download.svg" width="15">
+                            </th>
                             <th id="type"></th>
                             <th id="name">Name</th>
                             <th id="date">Last Update</th>
