try some loading animation

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <div class="container-fluid">
+
+            <!--<div id="loading"><em>Loading</em></div>-->
+
             <ul class="nav justify-content-center">
             </ul>
 
