--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,7 @@
                             <th id="name">Name</th>
                             <th id="date">Last Update</th>
                             <th id="size">Size</th>
+                            <th id="unit">Unit</th>
                         </tr>
                     </thead>
                     <tbody>
