change some js computing on size unit

--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,6 @@
     <body>
         <div class="container-fluid">
 
-            <!--<div id="loading"><em>Loading</em></div>-->
-
             <ul class="nav justify-content-center">
             </ul>
 
@@ -40,7 +38,7 @@
                 </div>
 
                 <div class="info">
-                    <button type="button" class="btn btn-outline-secondary btn-sm download-button">
+                    <button type="button" class="btn btn-outline-primary btn-sm download-button">
                         <img src="./fancyndex/www/icon/open-iconic/svg/data-transfer-download.svg" width="15">
                         <span class="badge badge-primary badge-nb-dl"></span>
                     </button>
