--- a/www/index.html
+++ b/www/index.html
@@ -38,14 +38,21 @@
                 </div>
 
                 <div class="info">
-                    <button type="button" class="btn btn-outline-primary btn-sm download-button">
-                        <img src="./fancyndex/www/icon/open-iconic/svg/data-transfer-download.svg" width="15">
-                        <span class="badge badge-primary badge-nb-dl"></span>
-                    </button>
+                    <div class="row">
+                        <div class="col-xs-8 col-lg-10">
+                            <button type="button" class="btn btn-outline-primary btn-sm download-button">
+                                <img src="./fancyndex/www/icon/open-iconic/svg/data-transfer-download.svg" width="15">
+                                <span class="badge badge-primary badge-nb-dl"></span>
+                            </button>
 
-                    <button type="button" class="btn btn-outline-info btn-sm information-button" data-toggle="collapse" data-target="#indexInfo" aria-controls="indexInfo" aria-expanded="false">
-                        <img src="./fancyndex/www/icon/open-iconic/svg/info.svg">
-                    </button>
+                            <button type="button" class="btn btn-outline-info btn-sm information-button" data-toggle="collapse" data-target="#indexInfo" aria-controls="indexInfo" aria-expanded="false">
+                                <img src="./fancyndex/www/icon/open-iconic/svg/info.svg">
+                            </button>
+                        </div>
+                        <div class="col-xs-4 col-lg-2">
+                            <input type="text" class="form-control form-control-sm search-engine" placeholder="Search for..." aria-label="Search for...">
+                        </div>
+                    </div>
 
                     <div class="collapse" id="indexInfo">
                         <div class="card card-body card-indexInfo">
