--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./fancyndex/www/css/index.css"/>
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container-fluid content">
 
             <ul class="nav justify-content-center">
             </ul>
@@ -79,6 +79,15 @@
                 </table>
             </div>
         </div>
+
+        <footer>
+            <span class="badge badge-light">
+                <span class="copyleft">&copy;</span> 2017 zxvfxwing -
+                <a href="https://github.com/zxvfxwing/fancyndex">Fancyndex</a>
+                - version 0.4
+            </span>
+
+        </footer>
 
         <script src="./fancyndex/www/js/popper-1.12.5.js"></script>
         <script src="./fancyndex/www/js/jquery-3.2.1.js"></script>
