--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="./fancyndex/www/css/index.css"/>
     </head>
     <body>
+        <div class="alert-div container">
+        </div>
         <div class="container-fluid content">
 
             <ul class="nav justify-content-center">
@@ -86,7 +88,6 @@
                 <a href="https://github.com/zxvfxwing/fancyndex">Fancyndex</a>
                 - version 0.4
             </span>
-
         </footer>
 
         <script src="./fancyndex/www/js/popper-1.12.5.js"></script>
