--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./fancyndex/www/css/index.css"/>
     </head>
     <body>
+	<h6>version 0.4-beta, bouton de TELECHARGEMENT bleu non fonctionnel, veuillez cliquer sur le fichier lui-meme pour telecharger.</h6>
         <div class="alert-div container">
         </div>
         <div class="container-fluid content">
