--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Download</h5>
+                                <h5 class="modal-title">Download</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
@@ -83,11 +83,52 @@
             </div>
         </div>
 
+        <!-- Release note Modal -->
+        <div class="modal fade" id="release-note-modal" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Release note</h5>
+                    </div>
+                    <div class="modal-body">
+                        <h6><strong>v0.5</strong></h6>
+                        <p class="text-left text-justify">
+                            - Global speed increase (JS &amp; C++ side) ;<br>
+                            - Enhancements into code ;<br>
+                            - Download one or multiples files.<br>
+                        </p>
+                        <br>
+                        <h6><strong>LICENSE</strong></h6>
+                        <p class="text-left text-justify">
+                            <strong>Fancyndex</strong> list your favorites directories &amp; files.<br><br>
+                            Copyright (C) 2017  Thibault Heckel<br><br>
+
+                            This program is free software: you can redistribute it and/or modify<br>
+                            it under the terms of the GNU General Public License as published by<br>
+                            the Free Software Foundation, either version 3 of the License, or<br>
+                            (at your option) any later version.<br><br>
+
+                            This program is distributed in the hope that it will be useful,<br>
+                            but WITHOUT ANY WARRANTY; without even the implied warranty of<br>
+                            MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>
+                            GNU General Public License for more details.<br>
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer>
             <span class="badge badge-light">
-                <span class="copyleft">&copy;</span> 2017 zxvfxwing -
-                <a href="https://github.com/zxvfxwing/fancyndex">Fancyndex</a>
-                - version 0.4
+                Copyright (C) 2017 Thibault Heckel -
+                <a href="https://github.com/zxvfxwing/fancyndex">
+                Fancyndex
+                </a>
+                -
+                <span class="release-note"> release 0.5</span>
             </span>
         </footer>
 
