Fix release note

--- a/www/index.html
+++ b/www/index.html
@@ -100,7 +100,9 @@
                         <br>
                         <h6><strong>LICENSE</strong></h6>
                         <p class="text-left text-justify">
-                            <strong>Fancyndex</strong> list your favorites directories &amp; files.<br><br>
+                            <mark>Fancyndex</mark><br>
+                            <i>A fancy web index to list your favorites directories &amp; files.</i><br><br>
+
                             Copyright (C) 2017  Thibault Heckel<br><br>
 
                             This program is free software: you can redistribute it and/or modify<br>
