--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="./fancyndex/www/css/index.css"/>
     </head>
     <body>
-	<h6>version 0.4-beta, bouton de TELECHARGEMENT bleu non fonctionnel, veuillez cliquer sur le fichier lui-meme pour telecharger.</h6>
         <div class="alert-div container">
         </div>
         <div class="container-fluid content">
@@ -93,11 +92,22 @@
                     <div class="modal-body">
                         <h6><strong>v0.5</strong></h6>
                         <p class="text-left text-justify">
-                            - Global speed increase (JS &amp; C++ side) ;<br>
-                            - Enhancements into code ;<br>
-                            - Download one or multiples files.<br>
+                            - Global speed increase (client &amp; server side) ;<br>
+                            - Code enhancements ;<br>
+                            - Download button working ;<br>
+                            - 7-zip archives on the fly for multiples files ;<br>
+                            - This pop-up window to saw last release updates &amp; license.<br>
                         </p>
                         <br>
+
+                        <h6><strong>Want to help ?</strong></h6>
+                        <p class="text-left text-justify">
+                            > Go on <a href="https://github.com/zxvfxwing/fancyndex">github</a> and make pull requests ;<br>
+                            > Saw mistakes ? tell me : <i>zxvfxwing@protonmail.com</i>.<br>
+                            > Fork it !
+                        </p>
+                        <br>
+
                         <h6><strong>LICENSE</strong></h6>
                         <p class="text-left text-justify">
                             <mark>Fancyndex</mark><br>
