--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <body>
         <div class="alert-div container">
         </div>
+
         <div class="container-fluid content">
 
             <ul class="nav justify-content-center">
@@ -33,7 +34,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-danger back-modal-button" data-dismiss="modal">lol nope</button>
-                                <button type="button" class="btn btn-success">Yes</button>
+                                <button type="button" class="btn btn-success dl-modal-button" data-dismiss="modal">Yes</button>
                             </div>
                         </div>
                     </div>
@@ -96,7 +97,7 @@
                             - Code enhancements ;<br>
                             - Download button working ;<br>
                             - 7-zip archives on the fly for multiples files ;<br>
-                            - This pop-up window to saw last release updates &amp; license.<br>
+                            - This pop-up window to show last release updates &amp; license.<br>
                         </p>
                         <br>
 
