gonna work on 0.6

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <div class="alert-div container">
+		<p> Téléchargement de plusieurs fichiers désactivé, timeout lorsque l'archive est trop grande ... 
+		<p> Seul posibilité pour le moment : télécharger un par un les fichiers </p>
+		<p> sorry <3 </p>
         </div>
 
         <div class="container-fluid content">
