serve static files OK

--- a/www/index.html
+++ b/www/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="./fancyndex/www/css/bootstrap-4.0/bootstrap.css">
-        <link rel="stylesheet" href="./fancyndex/www/css/animate.css">
-        <link rel="stylesheet" href="./fancyndex/www/css/index.css"/>
+        <link rel="stylesheet" href="fancyndex/www/css/bootstrap.min.css">
+        <link rel="stylesheet" href="fancyndex/www/css/animate.min.css">
+        <link rel="stylesheet" href="fancyndex/www/css/index.css"/>
     </head>
     <body>
         <div class="alert-div container">
-		<p> Téléchargement de plusieurs fichiers désactivé, timeout lorsque l'archive est trop grande ... 
+		<p> Téléchargement de plusieurs fichiers désactivé, timeout lorsque l'archive est trop grande ...
 		<p> Seul posibilité pour le moment : télécharger un par un les fichiers </p>
 		<p> sorry <3 </p>
         </div>
@@ -148,9 +148,9 @@
             </span>
         </footer>
 
-        <script src="./fancyndex/www/js/popper-1.12.5.js"></script>
-        <script src="./fancyndex/www/js/jquery-3.2.1.js"></script>
-        <script src="./fancyndex/www/js/bootstrap-4.0/bootstrap.js" ></script>
-        <script src="./fancyndex/www/js/index.js"></script>
+        <script src="fancyndex/www/js/popper-1.12.6.min.js"></script>
+        <script src="fancyndex/www/js/jquery-3.2.1.slim.min.js"></script>
+        <script src="fancyndex/www/js/bootstrap.min.js" ></script>
+        <script src="fancyndex/www/js/index.js"></script>
     </body>
 </html>
